# whisply

./: .gitignore  CITATION.cff  LICENSE  README.md  app.py  example_config.json  post_correction.yaml  pyproject.toml  requirements.txt  setup.cfg  setup.py  whisply.py  whisply_cli.py
examples/: example_config.json  post_correction.yaml
whisply/: app.py  app_helpers.py  cli.py  diarize_utils.py  download_utils.py  enhance_annotations.py  little_helper.py  models.py  output_templates.py  output_utils.py  post_correction.py  speaker_detection.py  transcription.py
whisply/app/: main.py
whisply/core/: __init__.py  core.py  core_llm.py  core_local.py
whisply/models/: models.py
whisply/templates/: prompts.py
whisply/utils/: app_utils.py  core_utils.py  diarize_utils.py  download_utils.py  output_utils.py
