[metadata]
name = whisply
version = 0.11.0
description = "Transcribe, translate, annotate and subtitle audio and video files with OpenAI's Whisper ... fast!"
long_description = file: README.md
long_description_content_type = text/markdown
author = Thomas Schmidt, Renat Shigapov
license = MIT
url = https://github.com/tsmdt/whisply

[options]
packages = find:
python_requires = >=3.11
install_requires =
    click==8.2.1
    typer==0.17.3
    numpy==2.3.2
    faster-whisper==1.2.0
    ffmpeg-python==0.2.0
    optimum==1.24.0
    pyannote.audio==3.3.2
    whisperx==3.4.2
    rich==13.7.1
    torch==2.7.0
    torchaudio==2.7.0
    transformers==4.50.0
    validators==0.35.0
    yt-dlp==2025.8.27
    gradio~=5.44.1

[options.entry_points]
console_scripts =
    whisply = whisply.cli:run