[metadata]
name = whisply
version = 0.11.1
description = "Transcribe, translate, annotate and subtitle audio and video files with OpenAI's Whisper ... fast!"
long_description = file: README.md
long_description_content_type = text/markdown
author = Thomas Schmidt, Renat Shigapov
license = MIT
url = https://github.com/tsmdt/whisply

[options]
packages = find:
python_requires = >=3.11, <3.13
install_requires =
    click==8.3.1
    typer==0.20.0
    matplotlib==3.10.7
    faster-whisper==1.2.1
    ffmpeg-python==0.2.0
    optimum==1.24.0
    pyannote.audio==3.3.2
    whisperx==3.7.4
    rich==13.7.1
    torch==2.8.0
    torchaudio==2.8.0
    transformers==4.57.3
    validators==0.35.0
    yt-dlp==2025.11.12
    gradio~=5.50.0

[options.entry_points]
console_scripts =
    whisply = whisply.cli:run