[metadata]
name = whisply
version = 0.14.0
description = "Fast, cross-platform CLI and GUI for batch transcription, translation, speaker annotation and subtitle generation using OpenAI’s Whisper on CPU, Nvidia GPU and Apple MLX."
long_description = file: README.md
long_description_content_type = text/markdown
author = Thomas Schmidt, Renat Shigapov
license = MIT
url = https://github.com/tsmdt/whisply

[options]
packages = find:
python_requires = >=3.10, <3.14
install_requires =
    click==8.3.1
    typer==0.20.0
    numpy==2.4.3
    matplotlib==3.10.7
    faster-whisper==1.2.1
    ffmpeg-python==0.2.0
    optimum==1.24.0
    pyannote.audio==3.4.0
    whisperx==3.7.8
    rich==14.3.3
    torch==2.8.0
    torchaudio==2.8.0
    transformers==4.57.3
    pytorch-lightning==2.5.4
    lightning==2.5.4
    validators==0.35.0
    yt-dlp==2026.3.17

[options.extras_require]
mlx =
    mlx-whisper==0.4.3
app =
    gradio~=5.50.0

[options.entry_points]
console_scripts =
    whisply = whisply.cli:run
